Add a request comparison API
